header css + fixes

--- a/pages/verbeteringen.html
+++ b/pages/verbeteringen.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../css/style.css">
+
     <title>Verbeteringen</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
                 <a href="../index.html">Tigo Kallenbach</a>
             </div>
             <nav>
-                <ul>
+                <ul id="main-nav">
                     <li></li>
                     <li></li>
                     <li>
