beginning of text adding

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <li>
                         <a href="#">Info</a>
                         <ul id="dropdown-nav">
-                            <li><a href="./pages/technieken.html">Technieken</a></li>
-                            <li><a href="./pages/verbeteringen.html">Verbeteringen</a></li>
-                            <li><a href="./pages/interesses.html">Interesses</a></li>
+                            <li><a href="./pages/technieken.html" id="dropdown">Technieken</a></li>
+                            <li><a href="./pages/verbeteringen.html" id="dropdown">Verbeteringen</a></li>
+                            <li><a href="./pages/interesses.html" id="dropdown">Interesses</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -31,8 +31,8 @@
         </div>
     </header>
     <main>
-        <h1><span></span></h1>
-        <h3><span></span></h3>
+        <h1>Hi, het is <span>Tigo</span></h1>
+        <h3 id="typing-text">Ik ben een <span></span></h3>
         <p></p>
     </main>
 </body>
