--- a/pages/technieken.html
+++ b/pages/technieken.html
@@ -21,9 +21,9 @@
                     <li>
                         <a href="#">Info</a>
                         <ul id="dropdown-nav">
-                            <li><a href="technieken.html">Technieken</a></li>
-                            <li><a href="verbeteringen.html">Verbeteringen</a></li>
-                            <li><a href="interesses.html">Interesses</a></li>
+                            <li><a href="technieken.html" id="dropdown">Technieken</a></li>
+                            <li><a href="verbeteringen.html" id="dropdown">Verbeteringen</a></li>
+                            <li><a href="interesses.html" id="dropdown">Interesses</a></li>
                         </ul>
                     </li>
                 </ul>
