--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/style.css">
+    <script src="js/script.js"></script>
 
     <title>Home-Page</title>
 </head>
@@ -31,9 +32,14 @@
         </div>
     </header>
     <main>
+        <div id="picture-1"></div>
+        <section>
         <h1>Hi, het is <span>Tigo</span></h1>
         <h3 id="typing-text">Ik ben een <span></span></h3>
         <p></p>
+        </section>
+        <div id="picture-2"></div>
+        <div id="picture-3"></div>
     </main>
 </body>
 </html>
