--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </div>
     </header>
     <main>
-        <div id="picture-1"></div>
-        <section>
+        <img src="./images/mainphoto.jpg" id="mainphoto">
+        <section id="space">
         <h1>Hi, het is <span>Tigo</span></h1>
         <h3 id="typing-text">Ik ben een <span></span></h3>
         <p></p>
         </section>
+        <div id="picture-1"></div>
         <div id="picture-2"></div>
-        <div id="picture-3"></div>
     </main>
 </body>
 </html>
