--- a/index.html
+++ b/index.html
@@ -40,6 +40,36 @@
         <div id="picture-1"></div>
         <div id="picture-2"></div>
     </section>
+    <div>
+        <table id="section" class="hidden">
+            <tr>
+                <th colspan="2">About me:</th>
+            </tr>
+            <tr>
+                <td colspan="2">&nbsp</td>
+            </tr>
+            <tr>
+                <td>Gamen: &nbsp</td>
+                <td>Ik speel games zoals Minecraft, Pokemon en een beetje roblox.</td>
+            </tr>
+            <tr>
+                <td>Lezen: &nbsp</td>
+                <td>Ik lees op het moment The Witcher series en manga en luister naar een luister boek.</td>
+            </tr>
+            <tr>
+                <td>Sporten: &nbsp</td>
+                <td>Ik doe aan tennis en ga naar de sportschool.</td>
+            </tr>
+            <tr>
+                <td>Coderen: &nbsp</td>
+                <td>Ik doe het nu voor iets meer dan een half jaar, ik werk met HTML, CSS, JS.</td>
+            </tr>
+            <tr>
+                <td>Werken: &nbsp</td>
+                <td>Ik werk op het moment ongeveer 9 uur per week vooral op de zaterdag.</td>
+            </tr>
+        </table>
+    </div>
     </main>
 </body>
 </html>
