Meeste pagina's af (niet top-quality)

--- a/pages/verbeteringen.html
+++ b/pages/verbeteringen.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/colors.css">
 
     <title>Verbeteringen</title>
 </head>
@@ -30,5 +31,31 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div id="content-header">
+            <h1>Verbeteringen voor <purple>mij</purple>:</h1>
+        </div>
+        <div id="content">
+            <h3>Moeilijkheden en uitdagingen:</h3>
+        </br>
+            <ol>
+                <li><red>Woordvinding</red> om te namen te geven aan id's en class's (vooral met <yellow>JavaScript</yellow>)</li>
+                <li>Letten op wat <blue>CSS</blue> kan doen i.v.m. pixels density's en hoe ik mijn websites kan verbetteren om deze fouten tegen te gaan.</li>
+                <li>Oefenen met <red>ideeen</red> van anderen want dan kan ik met het coderen oefenen zonder problemen van bedenken wat ik kan maken en waarover.</li>
+            </ol>
+        </br>
+            <P>Dit is omdat ik geen problemen heb met het uitvoeren van coderen, als ik iets lastig vind kan ik snel en effectief hulp vinden op het internet.</P>
+        </br>
+            <h3>Mijn inspiratie websites:</h3>
+            <ul>
+                <li><a href="https://lilith.rip/">Lilith.rip</a></li>
+                <li><a href="https://me.lilithmod.xyz/">Lilith.rip/account</a></li>
+                <li><a href="https://developer.hypixel.net/dashboard">developer.hypixel.net/dashboard</a></li>
+                <li><a href="https://www.youtube.com/">Youtube</a></li>
+                <li><a href="https://www.reddit.com/">Reddit</a></li>
+            </ul>
+            <p>Dit alles is wel met darkmode setting aan.</p>
+        </div>
+    </main>
 </body>
 </html>
