--- a/pages/interesses.html
+++ b/pages/interesses.html
@@ -30,5 +30,11 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div id="interesse-content">
+            <h3>De talen ik geinteresseerd in ben op nog te leren zijn: </h3>
+            
+        </div>
+    </main>
 </body>
 </html>
