--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/script.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script defer src="./js/script.js"></script>
 
     <title>Home-Page</title>
 </head>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <img src="images/mainphoto.jpg" id="mainphoto">
+        <img src="./images/mainphoto.jpg" id="mainphoto">
         <section id="space">
         <h1>Hi, het is <span>Tigo</span></h1>
         <h3 id="typing-text">Ik ben een <span></span></h3>
