--- a/pages/interesses.html
+++ b/pages/interesses.html
@@ -33,7 +33,13 @@
     <main>
         <div id="interesse-content">
             <h3>De talen ik geinteresseerd in ben op nog te leren zijn: </h3>
-            
+            <div>
+                <img src="../images/typescript.png" class="pictures">
+                <img src="../images/java.jpeg" class="pictures">
+                <img src="../images/rust.png" class="pictures">
+                <img src="../images/php.png" class="pictures">
+                <img src="../images/python.webp" class="pictures">
+            </div>
         </div>
     </main>
 </body>
