--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="./js/script.js"></script>
+    <script src="./js/script.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 
     <title>Home-Page</title>
