--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="./js/script.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <script defer src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Home-Page</title>
 </head>
@@ -22,9 +22,9 @@
                     <li>
                         <a href="#">Info</a>
                         <ul id="dropdown-nav">
-                            <li><a href="./pages/technieken.html" id="dropdown">Technieken</a></li>
-                            <li><a href="./pages/verbeteringen.html" id="dropdown">Verbeteringen</a></li>
-                            <li><a href="./pages/interesses.html" id="dropdown">Interesses</a></li>
+                            <li><a href="pages/technieken.html" id="dropdown">Technieken</a></li>
+                            <li><a href="pages/verbeteringen.html" id="dropdown">Verbeteringen</a></li>
+                            <li><a href="pages/interesses.html" id="dropdown">Interesses</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <img src="./images/mainphoto.jpg" id="mainphoto">
+        <img src="images/mainphoto.jpg" id="mainphoto">
         <section id="space">
         <h1>Hi, het is <span>Tigo</span></h1>
         <h3 id="typing-text">Ik ben een <span></span></h3>
