--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script defer src="js/script.js"></script>
+    <script defer src="js/script2.js"></script>
     <link rel="stylesheet" href="css/style.css">
 
     <title>Home-Page</title>
