--- a/index.html
+++ b/index.html
@@ -4,20 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
+    <script defer src="js/script2.js"></script>
     <link rel="stylesheet" href="css/style.css">
-
-    <script defer>
-        const tableHidden = document.getElementById("section");
-
-        tableHidden.addEventListener("mouseover", function(){
-          tableHidden.classList.add("show");
-        });
-        
-        tableHidden.addEventListener("mouseout", function(){
-          tableHidden.classList.remove("show");
-        });
-    </script>
 
     <title>Home-Page</title>
 </head>
@@ -83,6 +72,5 @@
         </table>
     </div>
     </main>
-    <script src="js/script2.js"></script>
 </body>
 </html>
