--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="js/script.js"></script>
-    <script defer src="js/script2.js"></script>
+    <script src="./js/script.js" defer></script>
+    <script src="./js/script2.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
 
     <title>Home-Page</title>
